--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tui = { version = "0.15", features = ["crossterm"], default-features = false }
+crossterm = "0.19"
+tokio = { version = "1", features = ["full"] }
+eyre = "0.6"
+log = "0.4" 
+tui-logger = "0.8.0"
